# oopsmate-v2

./: .gitignore  Cargo.toml  README.md  roadmap.md
apps/oopsmate/: Cargo.toml
apps/oopsmate/src/: main.rs  uci.rs
crates/core/: Cargo.toml
crates/core/src/: board.rs  fen.rs  hash.rs  lib.rs  moves.rs  position.rs  types.rs  undo.rs
crates/core/src/position/: make.rs  mod.rs  null.rs  tests.rs  unmake.rs
crates/eval/: Cargo.toml
crates/eval/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: history.rs  lib.rs  tt.rs
crates/memory/src/tt/: entry.rs  score.rs  table.rs  tests.rs
crates/movegen/: Cargo.toml
crates/movegen/src/: analysis.rs  attacks.rs  checks.rs  generate.rs  king.rs  leapers.rs  legal.rs  lib.rs  list.rs  pawns.rs  perft.rs  see.rs  sliders.rs  stage.rs  tests.rs  util.rs
crates/nnuebie_v2/: Cargo.toml
crates/nnuebie_v2/networks/: networks.md
crates/nnuebie_v2/src/: aligned.rs  arch.rs  constants.rs  context.rs  eval.rs  features.rs  finny.rs  layout.rs  lib.rs  loader.rs  network.rs  transform.rs  update.rs
crates/nnuebie_v2/src/eval/: accumulator.rs  pipeline.rs  refresh.rs  score.rs  tests.rs
crates/nnuebie_v2/src/layers/: activations.rs  affine.rs  mod.rs  sparse_affine.rs
crates/nnuebie_v2/src/update/: accum_i16.rs  psqt_i32.rs  simd.rs  tests.rs
crates/search/: Cargo.toml  build.rs
crates/search/src/: alphabeta.rs  control.rs  lib.rs  limits.rs  minimax.rs  picker.rs  qsearch.rs  root.rs  selectivity.rs  telemetry.rs  tests.rs  tune.rs  types.rs
crates/search/src/alphabeta/: child.rs  move_loop.rs  node.rs  probcut.rs  shared.rs
crates/search/src/qsearch/: evasions.rs  ordering.rs  search.rs  shared.rs
crates/strikes/: Cargo.toml  build.rs
crates/strikes/buildgen/: emit.rs  mod.rs
crates/strikes/buildgen/geometry/: between.rs  mod.rs  through.rs
crates/strikes/buildgen/leapers/: kings.rs  knights.rs  mod.rs  pawns.rs
crates/strikes/buildgen/sliders/: bishop.rs  mod.rs  rook.rs  table.rs
crates/strikes/src/: geometry.rs  leapers.rs  lib.rs  sliders.rs
crates/strikes/src/backend/: mod.rs  pext.rs
src/: lib.rs  main.rs
