[package]
name = "oopsmate-v2"
version = "0.1.0"
edition = "2024"
description = "Clean-slate OopsMate rewrite"
license = "MIT"
publish = false

[lib]
name = "oopsmate_v2"
path = "src/lib.rs"

[[bin]]
name = "oopsmate-v2"
path = "src/main.rs"

[dependencies]

[profile.dev]
opt-level = 1
incremental = true

[profile.test]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
overflow-checks = false
incremental = false

[profile.bench]
inherits = "release"
