[workspace]
members = [
    "crates/core",
    "crates/strikes",
    "crates/movegen",
    "crates/eval",
    "crates/nnuebie_v2",
    "crates/memory",
    "crates/search",
    "apps/oopsmate",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

description = "Clean-slate OopsMate rewrite"

[profile.dev]
opt-level = 1
incremental = true

[profile.test]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
overflow-checks = false
incremental = false

[profile.bench]
inherits = "release"
