[package]
name = "oopsmate-v2"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description.workspace = true

[[bin]]
name = "oopsmate-v2"
path = "src/main.rs"

[dependencies]
oopsmate-core = { path = "../../crates/core" }
oopsmate-eval = { path = "../../crates/eval" }
oopsmate-movegen = { path = "../../crates/movegen" }
oopsmate-search = { path = "../../crates/search" }
