[package]
name = "oopsmate-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description.workspace = true

[lib]
name = "oopsmate_eval"
path = "src/lib.rs"

[dependencies]
oopsmate-core = { path = "../core" }
nnuebie_v2 = { path = "../nnuebie_v2" }
